Added date_part: DatePartUnit based upon the enum class DatePartUnit

--- a/pandas/01 - My Pandas Series.ipynb
+++ b/pandas/01 - My Pandas Series.ipynb
@@ -56,14 +56,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['StrpTime.yyyymmdd', 'StrpTime.mmddyyyy', 'StrpTime.yymmdd', 'StrpTime.mmddyy', 'StrpTime.mmyyyy', 'StrpTime.mmyy']\n",
+      "['StrpTime.yyyymmdd', 'StrpTime.mmddyyyy', 'StrpTime.yymmdd', 'StrpTime.mmddyy', 'StrpTime.mmyyyy', 'StrpTime.mmyy', 'StrpTime.monthname_ddyy', 'StrpTime.shortmonth_ddyy']\n",
       "['DateSeparator.slash', 'DateSeparator.hypen', 'DateSeparator.none']\n"
      ]
     }
@@ -95,21 +95,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'slash': '/', 'hypen': '-', 'none': True}\n",
+      "{'slash': '/', 'hypen': '-', 'comma': ',', 'none': True}\n",
       "{'yyyymmdd': {'DESCRIPTION': 'Year with century, month and day', 'NUMBER_OF_SEPARATORS': 2, 'DATE_FORMAT_SEPARATOR': '%Y{}%m{}%d', 'DATE_FORMAT_NONE': '%Y%m%d'}}\n",
-      "{'yymmdd': {'DESCRIPTION': 'Year without century, month and day', 'NUMBER_OF_SEPARATORS': 2, 'DATE_FORMAT_SEPARATOR': '%y{}%m{}%d', 'DATE_FORMAT_NONE': '%y%m%d'}}\n",
+      "{'': {'DESCRIPTION': 'Year without century, month and day', 'NUMBER_OF_SEPARATORS': 2, 'DATE_FORMAT_SEPARATOR': '%y{}%m{}%d', 'DATE_FORMAT_NONE': '%y%m%d'}}\n",
       "{'mmddyyyy': {'DESCRIPTION': ' Month, day, and year with century', 'NUMBER_OF_SEPARATORS': 2, 'DATE_FORMAT_SEPARATOR': '%m{}%d{}%Y', 'DATE_FORMAT_NONE': '%m%d%Y'}}\n",
       "{'mmddyy': {'DESCRIPTION': ' Month, day, and year without century', 'NUMBER_OF_SEPARATORS': 2, 'DATE_FORMAT_SEPARATOR': '%m{}%d{}%y', 'DATE_FORMAT_NONE': '%m%d%y'}}\n",
       "{'mmyyyy': {'DESCRIPTION': ' Month, no days and year with century', 'NUMBER_OF_SEPARATORS': 1, 'DATE_FORMAT_SEPARATOR': '%m{}%Y', 'DATE_FORMAT_NONE': '%m%Y'}}\n",
       "{'mmyyyy': {'DESCRIPTION': ' Month, no days and year with century', 'NUMBER_OF_SEPARATORS': 1, 'DATE_FORMAT_SEPARATOR': '%m{}%Y', 'DATE_FORMAT_NONE': '%m%Y'}}\n",
-      "{'yyyymmdd': {'DESCRIPTION': 'Year with century, month and day', 'NUMBER_OF_SEPARATORS': 2, 'DATE_FORMAT_SEPARATOR': '%Y{}%m{}%d', 'DATE_FORMAT_NONE': '%Y%m%d'}, 'yymmdd': {'DESCRIPTION': 'Year without century, month and day', 'NUMBER_OF_SEPARATORS': 2, 'DATE_FORMAT_SEPARATOR': '%y{}%m{}%d', 'DATE_FORMAT_NONE': '%y%m%d'}, 'mmddyyyy': {'DESCRIPTION': ' Month, day, and year with century', 'NUMBER_OF_SEPARATORS': 2, 'DATE_FORMAT_SEPARATOR': '%m{}%d{}%Y', 'DATE_FORMAT_NONE': '%m%d%Y'}, 'mmddyy': {'DESCRIPTION': ' Month, day, and year without century', 'NUMBER_OF_SEPARATORS': 2, 'DATE_FORMAT_SEPARATOR': '%m{}%d{}%y', 'DATE_FORMAT_NONE': '%m%d%y'}, 'mmyyyy': {'DESCRIPTION': ' Month, no days and year with century', 'NUMBER_OF_SEPARATORS': 1, 'DATE_FORMAT_SEPARATOR': '%m{}%Y', 'DATE_FORMAT_NONE': '%m%Y'}, 'mmyy': {'DESCRIPTION': ' Month, no days and year without century', 'NUMBER_OF_SEPARATORS': 1, 'DATE_FORMAT_SEPARATOR': '%m{}%y', 'DATE_FORMAT_NONE': '%m%y'}}\n"
+      "{'monthname_ddyy': {'DESCRIPTION': 'full month name, day and Year without century,', 'NUMBER_OF_SEPARATORS': 0, 'DATE_FORMAT_SEPARATOR': '%B %d %y', 'DATE_FORMAT_NONE': '%B%d%y'}}\n",
+      "{'monthname_ddyy': {'DESCRIPTION': 'full month name, day and Year without century,', 'NUMBER_OF_SEPARATORS': 0, 'DATE_FORMAT_SEPARATOR': '%B %d %y', 'DATE_FORMAT_NONE': '%B%d%y'}}\n",
+      "{'yyyymmdd': {'DESCRIPTION': 'Year with century, month and day', 'NUMBER_OF_SEPARATORS': 2, 'DATE_FORMAT_SEPARATOR': '%Y{}%m{}%d', 'DATE_FORMAT_NONE': '%Y%m%d'}, '': {'DESCRIPTION': 'Year without century, month and day', 'NUMBER_OF_SEPARATORS': 2, 'DATE_FORMAT_SEPARATOR': '%y{}%m{}%d', 'DATE_FORMAT_NONE': '%y%m%d'}, 'mmddyyyy': {'DESCRIPTION': ' Month, day, and year with century', 'NUMBER_OF_SEPARATORS': 2, 'DATE_FORMAT_SEPARATOR': '%m{}%d{}%Y', 'DATE_FORMAT_NONE': '%m%d%Y'}, 'mmddyy': {'DESCRIPTION': ' Month, day, and year without century', 'NUMBER_OF_SEPARATORS': 2, 'DATE_FORMAT_SEPARATOR': '%m{}%d{}%y', 'DATE_FORMAT_NONE': '%m%d%y'}, 'mmyyyy': {'DESCRIPTION': ' Month, no days and year with century', 'NUMBER_OF_SEPARATORS': 1, 'DATE_FORMAT_SEPARATOR': '%m{}%Y', 'DATE_FORMAT_NONE': '%m%Y'}, 'mmyy': {'DESCRIPTION': ' Month, no days and year without century', 'NUMBER_OF_SEPARATORS': 1, 'DATE_FORMAT_SEPARATOR': '%m{}%y', 'DATE_FORMAT_NONE': '%m%y'}, 'monthname_ddyy': {'DESCRIPTION': 'full month name, day and Year without century,', 'NUMBER_OF_SEPARATORS': 0, 'DATE_FORMAT_SEPARATOR': '%B %d %y', 'DATE_FORMAT_NONE': '%B%d%y'}, 'shortmonth_ddyy': {'DESCRIPTION': 'short month name, day and Year without century,', 'NUMBER_OF_SEPARATORS': 0, 'DATE_FORMAT_SEPARATOR': '%B %d %y', 'DATE_FORMAT_NONE': '%B%d%y'}}\n"
      ]
     }
    ],
@@ -206,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -240,6 +242,18 @@
     "    space = 3\n",
     "    none = 4\n",
     "\n",
+    "class DatePartUnit(Enum): \n",
+    "    YY= 1\n",
+    "    QU= 2\n",
+    "    MO= 3\n",
+    "    DD= 4\n",
+    "    WK= 5\n",
+    "    HR= 6\n",
+    "    MI= 7\n",
+    "    SS= 8\n",
+    "\n",
+    "\n",
+    "\n",
     "DATE_SEPARATOR = {\n",
     "    'slash': '/',\n",
     "    'hyphen': '-',\n",
@@ -247,6 +261,7 @@
     "    'comma': ',',\n",
     "    'none': ''\n",
     "}\n",
+    "\n",
     "YYYYMMDD = {\n",
     "    'yyyymmdd': {\n",
     "        'DESCRIPTION': 'Year with century, month and day',\n",
@@ -344,7 +359,7 @@
     "_date_separation = MappingProxyType(DATE_SEPARATOR)\n",
     "\n",
     "\n",
-    "def parse_using_date_strptime_format(strp_time: StrpTime, date_separator: DateSeparator, orderdate) -> (int, int, int):\n",
+    "def parse_using_date_strptime_format(strp_time: StrpTime, date_separator: DateSeparator, orderdate) -> (int, int, int): # type: ignore\n",
     "    \"\"\"Parse a date string into month, day, and year components.\n",
     "\n",
     "    Args:\n",
@@ -376,20 +391,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fiscal year: 2024: Quarter I\n",
-      "Fiscal year: 2024: Quarter II\n",
-      "Fiscal year: 2024: Quarter III\n",
-      "Fiscal year: 2024: Quarter IV\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from datetime import datetime\n",
     "\n",
@@ -473,14 +477,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1948\n"
+      "20\n"
      ]
     }
    ],
@@ -488,7 +492,8 @@
     "from datetime import datetime\n",
     "from dateutil.relativedelta import relativedelta\n",
     "\n",
-    "def datediff(date_part: str, orderdate: str, deliverydate: str) -> int:\n",
+    "\n",
+    "def datediff(date_part: DatePartUnit, strp_time: StrpTime, date_separator: DateSeparator, orderdate: str, deliverydate: str) -> int:\n",
     "    \"\"\"_Function to calculate the difference between two dates based on the date_part\n",
     "\n",
     "    Args:\n",
@@ -508,9 +513,9 @@
     "    Returns:\n",
     "                       int: The date difference between the two dates \n",
     "        \"\"\"\n",
-    "    mm,dd,yyyy = get_month_day_and_year(orderdate)\n",
+    "    mm, dd, yyyy = parse_using_date_strptime_format(strp_time, date_separator, orderdate)\n",
     "    start_date = datetime(yyyy,mm,dd)\n",
-    "    mm,dd,yyyy = get_month_day_and_year(deliverydate)\n",
+    "    mm, dd, yyyy = parse_using_date_strptime_format(strp_time, date_separator, deliverydate)\n",
     "    end_date = datetime(yyyy,mm,dd)\n",
     "    \n",
     "    delta = relativedelta(end_date, start_date)\n",
@@ -526,12 +531,10 @@
     "        'SS': lambda: (end_date - start_date).total_seconds()\n",
     "    }\n",
     "\n",
-    "    return date_part_units.get(date_part.upper(), lambda: None)()\n",
+    "    return date_part_units.get(date_part.name, lambda: None)()\n",
     "       \n",
-    "a = datediff('DD', '7/21/92', '11/20/97')\n",
-    "print(a)\n",
-    "\n",
-    "   "
+    "a = datediff(DatePartUnit.QU, StrpTime.mmddyy,DateSeparator.slash,'7/22/92', '7/22/97')\n",
+    "print(a)\n"
    ]
   },
   {
