--- a/pandas/01-My Panda dates.ipynb
+++ b/pandas/01-My Panda dates.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -447,6 +447,17 @@
     "    October   = 10\n",
     "    November  = 11\n",
     "    December  = 12\n",
+    "\n",
+    "\n",
+    "class DatePartUnit(Enum): \n",
+    "    YY= 1\n",
+    "    QU= 2\n",
+    "    MO= 3\n",
+    "    DD= 4\n",
+    "    WK= 5\n",
+    "    HR= 6\n",
+    "    MI= 7\n",
+    "    SS= 8\n",
     "\n",
     "\n",
     "DATE_SEPARATOR = {\n",
@@ -667,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -708,17 +719,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fiscal year: 2024: Quarter I\n",
-      "Fiscal year: 2024: Quarter II\n",
-      "Fiscal year: 2024: Quarter III\n",
-      "Fiscal year: 2024: Quarter IV\n"
+      "Fiscal year: 2026: Quarter I\n",
+      "Fiscal year: 2026: Quarter II\n",
+      "Fiscal year: 2025: Quarter III\n",
+      "Fiscal year: 2025: Quarter IV\n"
      ]
     }
    ],
@@ -748,15 +759,15 @@
     "    elif 4 <= month <= 6:\n",
     "        return f\"Fiscal year: {fiscal_year}: Quarter IV\"\n",
     "\n",
-    "print (create_fiscal_year_quarter(StrpTime.yyyymmdd, DateSeparator.hyphen, '2023-7-28'))\n",
-    "print(create_fiscal_year_quarter(StrpTime.yyyymmdd, DateSeparator.hyphen, '2023-11-28'))\n",
-    "print(create_fiscal_year_quarter(StrpTime.yyyymmdd, DateSeparator.hyphen, '2024-2-28'))\n",
-    "print(create_fiscal_year_quarter(StrpTime.yyyymmdd, DateSeparator.hyphen, '2024-5-28'))\n"
+    "print(create_fiscal_year_quarter(StrpTime.yyyymmdd, DateSeparator.hyphen, '2025-7-28'))\n",
+    "print(create_fiscal_year_quarter(StrpTime.yyyymmdd, DateSeparator.hyphen, '2025-11-28'))\n",
+    "print(create_fiscal_year_quarter(StrpTime.yyyymmdd, DateSeparator.hyphen, '2025-2-28'))\n",
+    "print(create_fiscal_year_quarter(StrpTime.yyyymmdd, DateSeparator.hyphen, '2025-5-28'))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -802,14 +813,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "delta_units: 14\n"
+      "20\n"
      ]
     }
    ],
@@ -817,7 +828,8 @@
     "from datetime import datetime\n",
     "from dateutil.relativedelta import relativedelta\n",
     "\n",
-    "def datediff(strp_time: StrpTime, date_separator: DateSeparator, date_part: str, orderdate: str, deliverydate: str) -> int:\n",
+    "\n",
+    "def datediff(date_part: DatePartUnit, strp_time: StrpTime, date_separator: DateSeparator, orderdate: str, deliverydate: str) -> int:\n",
     "    \"\"\"_Function to calculate the difference between two dates based on the date_part\n",
     "\n",
     "    Args:\n",
@@ -855,11 +867,11 @@
     "        'SS': lambda: (end_date - start_date).total_seconds()\n",
     "    }\n",
     "\n",
-    "    return date_part_units.get(date_part.upper(), lambda: None)()\n",
+    "    return date_part_units.get(date_part.name, lambda: None)()\n",
     "       \n",
-    "\n",
-    "delta_units = datediff(StrpTime.yyyymmdd, DateSeparator.none,'YY', '20100101', '20240101')\n",
-    "print(f'delta_units: {delta_units}')\n"
+    "# Test the function with different date parts       \n",
+    "a = datediff(DatePartUnit.QU, StrpTime.mmddyy,DateSeparator.slash,'7/22/92', '7/22/97')\n",
+    "print(a)\n"
    ]
   },
   {
@@ -890,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -905,7 +917,7 @@
     "from datetime import datetime,date\n",
     "from dateutil.relativedelta import relativedelta\n",
     "\n",
-    "def dateadd(strp_time: StrpTime, date_separator: DateSeparator, date_part: str, units_number: int, orderdate: str) -> datetime:\n",
+    "def dateadd(strp_time: StrpTime, date_separator: DateSeparator,date_part: DatePartUnit,  units_number: int, orderdate: str) -> datetime:\n",
     "    \"\"\"\n",
     "    Function to calculate the units_number to a date based upon the date_part\n",
     "    Args:\n",
@@ -939,16 +951,16 @@
     "        'SS': lambda: start_date + relativedelta(seconds=units_number),\n",
     "    }\n",
     "\n",
-    "    return date_part_units.get(date_part.upper(), lambda: None)()\n",
+    "    return date_part_units.get(date_part.name, lambda: None)()\n",
     "\n",
     "# Example usage\n",
-    "derived_date = dateadd(StrpTime.yyyymmdd, DateSeparator.none,'YY',25,'20000101')\n",
+    "derived_date = dateadd(StrpTime.yyyymmdd, DateSeparator.none,DatePartUnit.YY,25,'20000101')\n",
     "print(f'{derived_date}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -990,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
