parse_using_date_strptime_format is the preferred way to tranform dataes.

--- a/pandas/01-My Panda dates.ipynb
+++ b/pandas/01-My Panda dates.ipynb
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -715,6 +715,90 @@
     "\n",
     "mm, dd, yyyy = parse_using_date_strptime_format(StrpTime.monthname_ddyyyy, DateSeparator.comma, 'December 23, 2123')\n",
     "print(f\"month: {mm}  day: {dd}  year: {yyyy}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "old_date  December 23, 2123  new_date 21231223\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "from enum import Enum\n",
+    "\n",
+    "class StrpTime(Enum):\n",
+    "    yyyymmdd = 1\n",
+    "    mmddyyyy = 2\n",
+    "    yymmdd = 3\n",
+    "    mmddyy = 4\n",
+    "    mmyyyy = 5\n",
+    "    mmyy = 6  \n",
+    "    monthname_ddyyyy = 7\n",
+    "    shortmonth_ddyyyy = 8\n",
+    "    monthname_ddyy = 9\n",
+    "    shortmonth_ddyy = 10\n",
+    "\n",
+    "class DateSeparator(Enum):\n",
+    "    slash = 1\n",
+    "    hyphen = 2\n",
+    "    space = 3\n",
+    "    none = 4\n",
+    "    comma = 5\n",
+    "\n",
+    "# Assuming _all_date_formats combines all the individual dictionaries into one\n",
+    "_all_date_formats = {**YYYYMMDD, **YYMMDD, **MMDDYYYY, **MMDDYY, **MMYYYY, **MMYY, **MONTHNAME_DDYYYY, **SHORTMONTH_DDYYYY, **MONTHNAME_DDYY, **SHORTMONTH_DDYY}\n",
+    "\n",
+    "\n",
+    "def parse_using_date_strptime_format(input_strp_time: StrpTime, input_date_separator: DateSeparator, orderdate: str, output_strp_time: StrpTime, output_date_separator: DateSeparator) -> str:\n",
+    "    \"\"\"\n",
+    "    Parses a date string using the specified format and separator.\n",
+    "\n",
+    "    Args:\n",
+    "        input_strp_time (StrpTime): The enum representing the input date format.\n",
+    "        input_date_separator (DateSeparator): The enum representing the input date separator.\n",
+    "        orderdate (str): The date string to be parsed.\n",
+    "        output_strp_time (StrpTime): The enum representing the output date format.\n",
+    "        output_date_separator (DateSeparator): The enum representing the output date separator.\n",
+    "\n",
+    "    Returns:\n",
+    "        str: The parsed date string.\n",
+    "    \"\"\"\n",
+    "       # Define the input format based on the input enums\n",
+    "    input_format_info = _all_date_formats[input_strp_time.name]\n",
+    "    input_separator = DATE_SEPARATOR[input_date_separator.name]\n",
+    "    input_date_format = input_format_info['DATE_FORMAT_NONE'] if input_date_separator == DateSeparator.none else input_format_info['DATE_FORMAT_SEPARATOR'].format(input_separator, input_separator)\n",
+    "\n",
+    "    # Parse the input date\n",
+    "    parsed_date = datetime.strptime(orderdate, input_date_format)\n",
+    "\n",
+    "    # Define the output format based on the output enums\n",
+    "    output_format_info = _all_date_formats[output_strp_time.name]\n",
+    "    output_separator = DATE_SEPARATOR[output_date_separator.name]\n",
+    "    output_date_format = output_format_info['DATE_FORMAT_NONE'] if output_date_separator == DateSeparator.none else output_format_info['DATE_FORMAT_SEPARATOR'].format(output_separator, output_separator)\n",
+    "\n",
+    "    # Return the formatted output date\n",
+    "    return parsed_date.strftime(output_date_format)\n",
+    "    \n",
+    "    \n",
+    "old_date = 'December 23, 2123'\n",
+    "new_date = parse_using_date_strptime_format(StrpTime.monthname_ddyyyy, DateSeparator.comma, 'December 23, 2123', StrpTime.yyyymmdd, DateSeparator.none)\n",
+    "\n",
+    "print(f\"old_date  {old_date}  new_date {new_date}\")\n"
    ]
   },
   {
